<resources>
    <string name="app_name">BloodBond</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me_login">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="sign_up_new_account">Sign Up</string>
    <string name="sign_up_new_account_label">Don\'t have an account?</string>
    <string name="login_existing_account_label">Already have an account?</string>
    <string name="login_existing_account">Login</string>
    <string name="app_slogan">\"Connecting Lives, One Drop at a Time\"</string>
    <string name="prompt_email_label">Enter your email</string>
    <string name="prompt_password_label">Enter your password</string>
    <string name="role_label">Are you a?</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_name">Name</string>
    <string name="blood_type_label">Please select your blood type:</string>
    <string name="donor_main_dashboard">Donor Main Dashboard</string>

    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site_manager_main_dashboard">Site Manager Main Dashboard</string>
    <string name="add_donation_site">Add Donation Site</string>
    <string name="save_donation_site">Save Donation Site</string>
    <string name="logout">Logout</string>
    <string name="contact_information">Contact Information:</string>
    <string name="date_opened">Date Opened:</string>
    <string name="date_closed">Date Closed:</string>
    <string name="opening_hour">Opening Hour:</string>
    <string name="closing_hour">Closing Hour:</string>
    <string name="description">Description:</string>
    <string name="blood_type_needed">Blood Type Needed:</string>
    <string name="donation_site_name">Donation Site Name</string>
    <string name="donation_site_address">Donation Site Address</string>
    <string name="site_navigation_direction_button">Site Navigation Direction Button</string>
    <string name="updating_notifications">Updating notifications</string>
    <string name="super_user_main_dashboard">Super User Main Dashboard</string>
</resources>