<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/donationSiteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_site_name"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/donationSiteAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_site_address"
                android:maxLines="2"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/site_navigation_direction_button"
            android:src="@drawable/direction"
            android:background="@null"
            android:layout_marginEnd="16dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/secondary_text"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_information"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/donationSiteContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donation Site Contact"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_opened"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/donationSiteDateOpened"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donation Site Date"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_closed"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/donationSiteDateClosed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donation Site Date"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opening_hour"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/donationSiteOpeningHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donation Site Opening Hours"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/closing_hour"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/donationSiteClosingHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donation Site Closing Hours"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/donationSiteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Donation Site Description"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blood_type_needed"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/bloodTypesNeeded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Blood Types Needed"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/donationSiteDonorRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register as Donor"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:backgroundTint="@color/primary_red" />

        <Button
            android:id="@+id/donationSiteVolunteerRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register as Volunteer"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:backgroundTint="@color/primary_red"/>
    </LinearLayout>

</LinearLayout>